<resources>
    <string name="app_name">Sociality</string>
    <string name="title_activity_maps_activity_soc">Sociality</string>
    <color name="Myblue">#549EFD</color>

    <string name="Start">Start</string>
    <string name="title_activity_splash_screen">Sociality</string>
    <string name="title_activity_maps">Sociality</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mnu">mnuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="products">Products</string>
    <string name="Latest">Latest Updates</string>
    <string name="Profile">My Profile</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="action_menu_directions">Directions</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="About">About</string>
    <string name="Exit">Exit</string>
    <string name="title_activity_latest">LatestActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="Version">1.0.0</string>
    <string name="DevMsg">The Application is in continuous development. Please send and issues or suggestions to: </string>
    <string name="Email">support@acaciasoftware.com.au</string>
    <string name="Copyright">Copyright@2015 Acacia Software Systems</string>
    <string name="soc_title_label">Anti Social Behavior</string>
    <string name="soc_title_hint">Hint</string>
    <string name="soc_details_label">Title</string>
    <string name="soc_solved_label">Solved</string>
    <string name="Take">take</string>
    <string name="soc_add_new">Add New Entry</string>
    <string name="country_prompt">Country</string>
    <string name="incident">Incident</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="Twitter">Twitter:</string>
    <string name="AcaciaSoftware">\@AcaciaSoftware</string>
    <string name="Search">Search</string>
    <string name="photo">photo</string>
    <string name="preview">Preview</string>
    <string name="camera">Camera</string>
    <string name="image_cd_camera">This is my camera</string>


    <string-array name="country_arrays">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Date</item>
    </string-array>

    <string-array name="incident_arrays">
        <item>Assault</item>
        <item>Vandalism</item>
        <item>Anti-Social</item>
        <item>Steal</item>
        <item>Drug Use</item>
        <item>Animal Cruelty</item>
        <item>Noise</item>
        <item>Other</item>
    </string-array>

</resources>
