<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.acaciasosoftware.sociality.MapsActivitySoc" >

    <item
        android:id="@+id/add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="always"
        android:icon="@mipmap/ic_action_new"
        />
    <item
        android:id="@+id/search"
        android:orderInCategory="200"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@mipmap/ic_action_search"/>

    <item
        android:id="@+id/latest"
        android:orderInCategory="300"
        android:title="@string/Latest"
        app:showAsAction="always"
        android:icon="@mipmap/ic_public_white_24dp"/>
    <item
        android:id="@+id/profile"
        android:orderInCategory="400"
        android:title="@string/Profile"
        app:showAsAction="always"
        android:icon="@mipmap/ic_person_white_24dp"/>

      <item
          android:id="@+id/about"
          android:orderInCategory="500"
          android:title="@string/About"
          app:showAsAction="never"/>

    <item
        android:id="@+id/exit"
        android:orderInCategory="600"
        android:title="@string/Exit"
        app:showAsAction="never"/>


</menu>
